# tipple

./: .env  .gitignore  README.md  pyproject.toml  pyrightconfig.json
migrations/versions/: 0d2de8bcbda1_add_posts.py  1ce72cc151e3_create_users.py  3902b3cf61d5_add_bio_to_users.py  9e5c32e6c7e7_added_channel_class.py  a297bd1574a9_added_connections_to_channels_and_users.py  bbd769b4f129_added_a_path_column_to_channels_to_.py  cc4ef9567c87_added_a_table_for_users_to_follow_.py
tests/: conftest.py  test_api.py  test_auth.py  test_auth_pages.py  test_channels_api.py  test_models.py  test_posts_model.py  test_profile.py  test_profile_and_posts.py
tipple/: __init__.py  config_classes.py  models.py
tipple/auth/: __init__.py  forms.py
tipple/channels/: __init__.py  api.py  forms.py
tipple/posts/: __init__.py  forms.py
tipple/static/js/: post_body_counter.js
tipple/static/ts/: post_body_counter.ts
tipple/templates/: _forms.html  base.html  index.html
tipple/templates/auth/: login.html  me.html  profile.html  register.html
tipple/templates/channels/: _follow_button.html  _header.html  _post_body_counter.ts.html  _post_form.html  _post_item.html  _posts_list.html  _signin_hint.html  index.html  new.html  show.html
tipple/templates/posts/: _post_form.html
