[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tipple"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "Flask",
  "Flask-SQLAlchemy",
  "Flask-Login",
  "Flask-Migrate",
  "Flask-WTF",
  "email-validator",
  "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
]
